--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "classnames": "^2.3.1",
     "http-proxy-middleware": "^1.0.5",
     "moment": "^2.29.4",
     "react": "^17.0.2",
